<resources>
    <string name="app_name">Kaar News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="hello">Hello!</string>
    <string name="login_to_get_started">Login To Get Started</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="facebook">Facebook</string>
    <string name="todo">TODO</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create an account!</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter password</string>
    <string name="already_registered">Already Registered, </string>
    <string name="sign_in">Sign in!</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="more_detail">More detail:</string>
    <string name="url">URL</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="bookmark">Bookmark</string>
    <string name="log_in_to_get_your_favourite_news_list">Log in to get your favourite news list...</string>
    <string name="your_favourite_list">Your Favourite List</string>
    <string name="explore">Explore</string>
    <string name="cancel">Cancel</string>
    <string name="result">Result</string>
    <string name="logo">Logo</string>
    <string name="account">Account</string>
    <string name="latest">Latest</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="first_name">First name</string>
    <string name="change">Change</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>
    <string name="get_started_with_no_account">Get started with no Account</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="birth">Birth</string>
    <string name="please_fill_in_your_information">Please fill in your information!</string>
    <string name="update_your_info">Update your Info</string>
    <string name="hello_and_welcome_to_our_news_app">Hello and welcome to our news app!</string>
    <string name="congratulations_on_joining_our_community_of_news_readers_let_s_explore_and_stay_updated_with_the_latest_news_from_reliable_sources">Congratulations on joining our community of news readers. Let\'s explore and stay updated with the latest news from reliable sources.</string>
    <string name="next">Next</string>
    <string name="privacy">Privacy</string>
</resources>